Make sure images aren't overflowing the available width.

--- a/assets/scss/_forums.scss
+++ b/assets/scss/_forums.scss
@@ -81,6 +81,10 @@
   background-color: #ddd;
 }
 
+.l-forum-single-post img {
+  max-width: 100%;
+}
+
 .c-single-post-post_info {
   grid-area: post_info;
   background-color: white;
